fix display chicken result

--- a/chicken.html
+++ b/chicken.html
@@ -53,7 +53,7 @@
 
             const seedNum = new SeedNum(server, client, nonce);
 
-            const deads = Array.from({ length: 25 }, (_, i) => i + 1);
+            const deads = Array.from({ length: 25 }, (_, i) => i);
             const chickenResults = [];
 
             // generate dead points
